changed sender,removed bg editted send_sms & index

--- a/templates/appreciation.html
+++ b/templates/appreciation.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
 
 
@@ -21,4 +21,4 @@
         </div>
         
     </center>
-{% endblock %}
+{% endblock %} -->
