--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 	{% with messages = get_flashed_messages() %}
     {% if messages %}
     {% for message in messages %}
-      <h3 class="text text-success text-center">{{ message }}</h3>
+      <small class="text text-success text-center">{{ message }}</small>
     {% endfor %}
     {% endif %}
     {% endwith %}
