--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 
 {% block body %}
-<div class="container p-3" style="width: 600px;">
+<div class="container p-3 bg-light" style="width: 600px;">
 
 	<div class="col-md-12" align="center" >
 		<h2 id="title">Fund Management</h2>
