--- a/templates/index.html
+++ b/templates/index.html
@@ -45,9 +45,9 @@
 			<label for="beneficiary">Beneficiary</label>
 			<select class="form-control"  required="" name="beneficiary">
 				<option disabled="disabled" selected="">Please select beneficiary</option>
-				<option id="fam1" value="BENEFICIARY_1">Gideon</option>
-				<option id="fam2" value="BENEFICIARY_2">Ekow</option>
-				<option id="fam3" value="BENEFICIARY_3">BENEFICIARY_3</option>	
+				<option id="fam1" value="Gideon">Gideon</option>
+				<option id="fam2" value="Ekow">Ekow</option>
+				<option id="fam3" value="General Family">General Family</option>	
 			</select>
 		</div>
 
