file title with timestamp & contributor sms added

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -38,6 +38,9 @@
                     {% endfor%}
                     {% endif%}
                 </tbody>
+                <tfoot>
+                    
+                </tfoot>
             </table>
         </div>
         <a class="btn btn-primary mr-3" href="/">back to home</a>
