--- a/templates/base.html
+++ b/templates/base.html
@@ -46,36 +46,11 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/buttons/1.7.1/js/buttons.colVis.min.js"></script>
 
 
-
-
-
-
-
-
-
-
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/plug-ins/1.10.25/api/sum().js"></script>
 
     
-        
-    <script>
+
     
-        // $(document).ready( function () {
-        // $('#table_id').DataTable();
-        // } );
-    
-
-        $(document).ready(function() {
-        var table = $('#table_id').DataTable( {
-        lengthChange: false,
-        buttons: ['excel', 'pdf',]
-        } );
- 
-        table.buttons().container()
-        .appendTo( '#tb_rapper .col-md-6:eq(0)' );
-        } );
-
-        
-
-    </script>
+    <script src="/static/js/index.js"></script>
 </body>
 </html>
