--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,8 @@
 body{
-    /* background-image: url("/static/images/bg.jpg");
+    background-image: url("/static/images/bg.jpg");
     background-repeat: no-repeat;
     background-position: center center;
-    background-attachment: fixed; */
+    background-attachment: fixed;
 
 
     display: flex;
