--- a/templates/appreciation.html
+++ b/templates/appreciation.html
@@ -4,7 +4,7 @@
 
 
 {% block title %}
-	Thank You
+	login
 {% endblock %}
 
 
@@ -15,13 +15,7 @@
     <div class="col-md-12" align="center" >
         <h2 id="title">Admin Login</h2>
     </div>
-    <!-- {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    {% for message in messages %}
-        <small class="text text-success text-center">{{ message }}</small>
-    {% endfor %}
-    {% endif %}
-    {% endwith %} -->
+   
 
     <form name='Login' method="POST" >
 
